--- a/config.json
+++ b/config.json
@@ -1,7 +1,15 @@
 {
+    "connection": {
+        "baudRate": -1,
+        "comNumber": 1,
+        "dataBits": -1,
+        "flowControl": "hardware",
+        "parity": "odd",
+        "stopBits": "oneandhalf"
+    },
     "motors": [
         {
-            "code": "HLB",
+            "code": "VF",
             "enabled": true,
             "inverse": false,
             "k_backward": 1,
@@ -9,7 +17,7 @@
             "slot": 0
         },
         {
-            "code": "HLF",
+            "code": "VF",
             "enabled": true,
             "inverse": false,
             "k_backward": 1,
@@ -17,7 +25,7 @@
             "slot": 1
         },
         {
-            "code": "HRB",
+            "code": "VF",
             "enabled": true,
             "inverse": false,
             "k_backward": 1,
@@ -25,7 +33,7 @@
             "slot": 2
         },
         {
-            "code": "HRF",
+            "code": "VF",
             "enabled": true,
             "inverse": false,
             "k_backward": 1,
@@ -33,7 +41,7 @@
             "slot": 3
         },
         {
-            "code": "VB",
+            "code": "VF",
             "enabled": true,
             "inverse": false,
             "k_backward": 1,
@@ -49,7 +57,7 @@
             "slot": 5
         },
         {
-            "code": "VL",
+            "code": "VF",
             "enabled": true,
             "inverse": false,
             "k_backward": 1,
@@ -57,7 +65,7 @@
             "slot": 6
         },
         {
-            "code": "VR",
+            "code": "VF",
             "enabled": true,
             "inverse": false,
             "k_backward": 1,
@@ -68,31 +76,31 @@
     "stabilization": {
         "depth": {
             "const_time": false,
-            "gain": 1,
-            "k1": 1,
-            "k2": 1,
-            "start": 1
+            "gain": 0,
+            "k1": 0.0005000000237487257,
+            "k2": 0,
+            "start": 0
         },
         "pitch": {
             "const_time": false,
-            "gain": 1,
-            "k1": 1,
-            "k2": 1,
-            "start": 1
+            "gain": 0,
+            "k1": 0,
+            "k2": 0,
+            "start": 0
         },
         "roll": {
-            "const_time": true,
-            "gain": 1,
-            "k1": 2,
-            "k2": 1.0039999485015869,
-            "start": 1
+            "const_time": false,
+            "gain": 0,
+            "k1": 0,
+            "k2": 0,
+            "start": 0
         },
         "yaw": {
             "const_time": false,
-            "gain": 1,
-            "k1": 1,
-            "k2": 1,
-            "start": 1.0069999694824219
+            "gain": 0,
+            "k1": 0,
+            "k2": 0,
+            "start": 0
         }
     }
 }
