Control system debug alpha finished, json file included (put it in build folder)

--- a/config.json
+++ b/config.json
@@ -5,8 +5,8 @@
         "dataBits": 8,
         "flowControl": "no",
         "parity": "no",
-        "pauseAfterReceived": 50,
-        "pauseAfterSent": 50,
+        "pauseAfterReceived": 0,
+        "pauseAfterSent": 20,
         "stopBits": "one"
     },
     "motors": [
@@ -14,7 +14,7 @@
             "code": "VF",
             "enabled": true,
             "inverse": false,
-            "k_backward": 1.2,
+            "k_backward": 1,
             "k_forward": 1,
             "slot": 0
         },
@@ -77,40 +77,68 @@
     ],
     "stabilization": {
         "depth": {
-            "iborders": 0.0,
-            "igain": 0.0,
-            "k1": 0.0,
-            "k2": 0.0,
-            "k3": 0.0,
-            "k4": 0.0,
-            "pgain": 0.0
+            "POS_FILTER.K": 1,
+            "POS_FILTER.T": 1,
+            "SPEED_FILTER.K": 1,
+            "SPEED_FILTER.T": 1,
+            "pErrGain": 1,
+            "pJoyUnitCast": 1,
+            "pSpeedDyn": 1,
+            "pThrustersCast": 1,
+            "pThrustersMax": 500,
+            "pThrustersMin": 500,
+            "pid.iGain": 1,
+            "pid.iMax": 500,
+            "pid.iMin": -500,
+            "pid.pGain": 1
         },
         "pitch": {
-            "iborders": 0.0,
-            "igain": 0.0,
-            "k1": 0.0,
-            "k2": 0.0,
-            "k3": 0.0,
-            "k4": 0.0,
-            "pgain": 0.0
+            "POS_FILTER.K": 1,
+            "POS_FILTER.T": 1,
+            "SPEED_FILTER.K": 1,
+            "SPEED_FILTER.T": 1,
+            "pErrGain": 1,
+            "pJoyUnitCast": 1,
+            "pSpeedDyn": 1,
+            "pThrustersCast": 1,
+            "pThrustersMax": 500,
+            "pThrustersMin": 500,
+            "pid.iGain": 1,
+            "pid.iMax": 500,
+            "pid.iMin": -500,
+            "pid.pGain": 1
         },
         "roll": {
-            "iborders": 0.0,
-            "igain": 0.0,
-            "k1": 0.0,
-            "k2": 0.0,
-            "k3": 0.0,
-            "k4": 0.0,
-            "pgain": 0.0
+            "POS_FILTER.K": 1,
+            "POS_FILTER.T": 1,
+            "SPEED_FILTER.K": 1,
+            "SPEED_FILTER.T": 1,
+            "pErrGain": 1,
+            "pJoyUnitCast": 1,
+            "pSpeedDyn": 1,
+            "pThrustersCast": 1,
+            "pThrustersMax": 500,
+            "pThrustersMin": 500,
+            "pid.iGain": 1,
+            "pid.iMax": 500,
+            "pid.iMin": -500,
+            "pid.pGain": 1
         },
         "yaw": {
-            "iborders": 0.0,
-            "igain": 0.0,
-            "k1": 0.0,
-            "k2": 0.0,
-            "k3": 0.0,
-            "k4": 0.0,
-            "pgain": 0.0
+            "POS_FILTER.K": 1,
+            "POS_FILTER.T": 1,
+            "SPEED_FILTER.K": 1,
+            "SPEED_FILTER.T": 1,
+            "pErrGain": 1,
+            "pJoyUnitCast": 1,
+            "pSpeedDyn": 1,
+            "pThrustersCast": 1,
+            "pThrustersMax": 500,
+            "pThrustersMin": 500,
+            "pid.iGain": 1,
+            "pid.iMax": 500,
+            "pid.iMin": -500,
+            "pid.pGain": 1
         }
     }
 }
